@startuml

title __CALCULATOR's Class Diagram__\n

  namespace  {
    class Calculator {
    }
  }
  

  namespace  {
    class CalculatorLayout {
    }
  }
  

  namespace  {
    class MathHandler {
    }
  }
  

  namespace  {
    class MyButton {
    }
  }
  

  Calculator -up-|> acm.program.GraphicsProgram
  Calculator o-- CalculatorLayout : calc
  CalculatorLayout -up-|> acm.graphics.GCompound
  MyButton -up-|> acm.graphics.GCompound


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
